--- a/ChatApp/ChatApp/ChatStoryboard.storyboard
+++ b/ChatApp/ChatApp/ChatStoryboard.storyboard
@@ -113,8 +113,7 @@
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ed-gL-Uof">
                                                     <rect key="frame" x="102" y="6" width="265" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="265" id="SVN-Kv-Pfh"/>
-                                                        <constraint firstAttribute="height" constant="30" id="bWn-QK-J7j"/>
+                                                        <constraint firstAttribute="height" constant="30" id="MbT-qo-Zqz"/>
                                                     </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -122,12 +121,11 @@
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="i3a-Kp-K4v" firstAttribute="centerY" secondItem="3ed-gL-Uof" secondAttribute="centerY" id="89p-Sr-xpZ"/>
                                                 <constraint firstItem="i3a-Kp-K4v" firstAttribute="top" secondItem="GSh-IV-QZ7" secondAttribute="topMargin" constant="3" id="BwL-sW-kPC"/>
+                                                <constraint firstItem="3ed-gL-Uof" firstAttribute="leading" secondItem="i3a-Kp-K4v" secondAttribute="trailing" constant="12" id="Fq0-xt-LR5"/>
                                                 <constraint firstItem="i3a-Kp-K4v" firstAttribute="leading" secondItem="GSh-IV-QZ7" secondAttribute="leadingMargin" constant="8" id="ctp-l6-e5J"/>
-                                                <constraint firstItem="3ed-gL-Uof" firstAttribute="top" secondItem="GSh-IV-QZ7" secondAttribute="top" constant="6" id="jjp-eK-QqM"/>
-                                                <constraint firstItem="3ed-gL-Uof" firstAttribute="leading" secondItem="i3a-Kp-K4v" secondAttribute="trailing" constant="12" id="rgR-xf-KOO"/>
-                                                <constraint firstAttribute="trailing" secondItem="3ed-gL-Uof" secondAttribute="trailing" constant="8" id="ssx-Rl-ueg"/>
+                                                <constraint firstAttribute="trailing" secondItem="3ed-gL-Uof" secondAttribute="trailing" constant="8" id="ge8-Fp-AXV"/>
+                                                <constraint firstItem="3ed-gL-Uof" firstAttribute="top" secondItem="GSh-IV-QZ7" secondAttribute="top" constant="6" id="i83-dM-WZG"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
